<resources>
    <string name="app_name">DC News</string>
    <string name="sample_news_date">16 Desember 2024</string>
    <string name="date_icon">date_icon</string>
    <string name="sample_news_desc">Semi Sautéed An investigation by the National Transportation Safety Board reveals that the fire that devoured a Tesla Semi after it crashed last month turned out to be way worse than we first thought. The Associated Press reports that California firefighters</string>
    <string name="sample_news_title">The Tesla Semi Fire Closed a Freeway for 15 Hours and Took 50,000 Gallons of Water to Put Out</string>
    <string name="sample_news_category">Technology</string>
    <string name="profile">Profile</string>
    <string name="news_thumbnail">news_thumbnail</string>
    <string name="my_profile">My Profile</string>
    <string name="about_me">About Me</string>
    <string name="my_name">Galih Putro Aji</string>
    <string name="my_email">galihputroaji.gh@gmail.com</string>
    <string name="my_phone">082220722220</string>
    <string name="news_detail">News Details</string>
    <string name="share">Share</string>
    <string-array name="data_title">
        <item>UMKM Kini Bisa Akses Lisensi Microsoft 365 cuma Rp 56.000 per Bulan, Begini Caranya</item>
        <item>Indonesia akan Jadi Pasar Smartphone Terbesar Kedua di Asia Pasific pada 2030, Bagaimana dengan Jaringan 5G?</item>
        <item>Ingin Cepat Terima Aduan Masyarakat, Polisi Buka Layanan Call Center 110</item>
        <item>Indosat Janjikan Internet di Kalimantan 15 Persen Lebih Cepat</item>
        <item>Brando PDIP soal Heru Budi Diusulkan Kembali Jadi Pj Gubernur: Jakarta Bukan Ajang Uji Coba</item>
        <item>Propam Polda Metro Ungkap Hasil Pemeriksaan Polisi Pelaku Pungli di Samsat Bekasi</item>
        <item>Polri Amankan Pilkada 2024 Sesuai Karakteristik Wilayah</item>
        <item>Penggunaan QRIS Dinilai Perlu Sosialisasi dan Edukasi Masif di Kalangan Pengusaha Kelontong</item>
        <item>Polri Masih Dalami Kasus Dugaan Penyelewengan Dana PON XXI Aceh-Sumut</item>
        <item>Google One Tawarkan Paket Berlangganan Murah Meriah, Rp 10 Ribu Dapat 30GB</item>
    </string-array>
</resources>