<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:backgroundTint="@color/secondary_background"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/primary_background"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/news_thumbnail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_image_background"
                android:clipToOutline="true"
                android:contentDescription="@string/news_thumbnail"
                android:scaleType="centerCrop"
                tools:ignore="UnusedAttribute" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/news_item_date_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_marginEnd="4dp"
                        android:contentDescription="@string/date_icon"
                        android:src="@drawable/ic_calendar_secondary" />

                    <TextView
                        android:id="@+id/news_item_date"
                        style="@style/TextStyle.NewsTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sample_news_date"
                        tools:ignore="TextSizeCheck" />

                    <TextView
                        android:id="@+id/news_item_category"
                        style="@style/TextStyle.NewsCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/sample_news_category"
                        tools:ignore="TextSizeCheck" />

                </LinearLayout>


                <TextView
                    android:id="@+id/news_item_title"
                    style="@style/TextStyle.NewsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="2"
                    android:maxLines="3"
                    android:minLines="1"
                    android:scrollHorizontally="false"
                    android:text="@string/sample_news_title"
                    android:textAppearance="?attr/textAppearanceSubtitle1" />

                <TextView
                    android:id="@+id/news_item_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="2"
                    android:maxLines="2"
                    android:minLines="1"
                    android:text="@string/sample_news_desc" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
